<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Title"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Author"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/checkBoxStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Status" />
</LinearLayout>